Add controller for balance reports

--- a/src/Idco.Balances/Idco.Balances.Api/Idco.Balances.Api.csproj
+++ b/src/Idco.Balances/Idco.Balances.Api/Idco.Balances.Api.csproj
@@ -4,11 +4,41 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>59f12676-164d-41bc-81a5-2fe5c22d2d14</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>wwwroot\Xml\Idco.Balances.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1591;</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1591;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.22" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Idco.Balances.Domain\Idco.Balances.Domain.csproj" />
+    <ProjectReference Include="..\Idco.Balances.Utility\Idco.Balances.Utility.csproj" />
+  </ItemGroup>
+
+  <!--Swagger-->
+  <ItemGroup>
+	<Content Update="wwwroot\Xml\Idco.Balances.Api.xml">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
+  </ItemGroup>
+  <PropertyGroup>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<DocumentationFile>wwwroot\Xml\Idco.Balances.Api.xml</DocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
 
 </Project>
